--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                             <h1 class="fw-bold text-center heading-text">Chào mừng đến với nền tảng học tập kỹ năng số
                                 mọi lúc, mọi nơi</h1>
                             <video class="mt-4" autoplay loop muted controls width="100%">
-                                <source src="assets/video/IOM.mp4" type="video/mp4">
+                                <source src="assets/video/IOM.webm" type="video/webm">
                             </video>
                         </div>
                     </div>
