--- a/Connect.html
+++ b/Connect.html
@@ -47,6 +47,7 @@
 </head>
 
 <body>
+    <button onclick="topFunction()" id="btn-back-to-top" title="Go to top">  <i class="fas fa-arrow-up"></i></button>
     <main class="main" id="top">
         <nav class="navbar navbar-expand-lg navbar-light fixed-top bg-custom">
             <div class="container">
@@ -60,11 +61,10 @@
                 </button>
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <a class="nav-link" aria-current="page" href="index.html">Trang chủ</a>
-                    <a class="nav-link " aria-current="page" href="Course.html">Các khóa học</a>
                     <a class="nav-link " aria-current="page" href="Partner.html">Đối tác đào tạo</a>
                     <a class="nav-link " aria-current="page" href="Jobs.html">Kết nối việc làm</a>
                     <a class="nav-link active" aria-current="page" href="#">Liên hệ</a>
-                    <a class="btn btn-theme py-2 m-2">Bắt đầu học</a>
+                    <a class="btn btn-theme py-2 m-2" href="https://hoc.congdanso.edu.vn/learner#/course/course-library" target="_blank">Bắt đầu học</a>
                 </div>
             </div>
         </nav>
@@ -163,8 +163,8 @@
     <script src="https://polyfill.io/v3/polyfill.min.js?features=window.scroll"></script>
     <script src="assets/js/theme.js"></script>
     <script src="assets/js/home-modal.js"></script>
-    <!-- Scroll Effect -->
-
+    <!-- back to top Button  -->
+    <script src="assets/js/toTop-btn.js"></script>
 </body>
 
 </html>
