--- a/Jobs.html
+++ b/Jobs.html
@@ -47,6 +47,7 @@
 </head>
 
 <body>
+    <button onclick="topFunction()" id="btn-back-to-top" title="Go to top">  <i class="fas fa-arrow-up"></i></button>
     <main class="main" id="top">
         <nav class="navbar navbar-expand-lg navbar-light fixed-top bg-custom">
             <div class="container">
@@ -60,11 +61,11 @@
                 </button>
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <a class="nav-link" aria-current="page" href="index.html">Trang chủ</a>
-                    <a class="nav-link " aria-current="page" href="Course.html">Các khóa học</a>
                     <a class="nav-link " aria-current="page" href="Partner.html">Đối tác đào tạo</a>
                     <a class="nav-link active" aria-current="page" href="#">Kết nối việc làm</a>
                     <a class="nav-link" aria-current="page" href="Connect.html">Liên hệ</a>
-                    <a class="btn btn-theme py-2 m-2">Bắt đầu học</a>
+                    <a class="btn btn-theme py-2 m-2" href="https://hoc.congdanso.edu.vn/learner#/course/course-library" target="_blank">Bắt đầu học</a>
+
                 </div>
             </div>
         </nav>
@@ -73,22 +74,24 @@
             <img src="./assets/img/gallery/header2-img.svg" class=" pt-5 w-100" alt="">
             <div class="header-banner-text" style="top: 90%;">
                 <h1 class="fw-bold">Kết nối việc làm</h1>
-                <p class="pt-3">Những kiến thức cơ bản để giúp bạn bắt đầu làm việc hiệu quả với máy tính</p>
+                <p class="pt-3">Những kiến thức cơ bản để giúp bạn bắt đầu làm việc hiệu quả với máy
+                    tính</p>
             </div>
         </div>
         <!-- Content -->
         <div class="container pb-7 pt-7">
             <div class="row">
                 <div class="col-md-6 col-sm-12 d-flex justify-content-end">
-                    <div class="custom-card" style="max-width: 415px">
+                    <div class="custom-card job-card" style="max-width: 415px">
                         <div class="d-flex flex-column">
-                                <img src="./assets/img/connect/vietnamworks.svg" alt="" class="categories-image_active">
+                            <img src="./assets/img/connect/vietnamworks.svg" alt="" class="categories-image_active">
                             <div class="col-12 d-flex flex-column text-center">
                                 <h4 class="fw-bold pb-5 pt-4">
                                     VIETNAMWORKS
                                 </h4>
                                 <span>
-                                    Xây dựng một nền tảng học tập kĩ năng số dưới hình thức Nguồn học liệu mở / khoá học đại
+                                    Xây dựng một nền tảng học tập kĩ năng số dưới hình thức Nguồn học liệu mở / khoá học
+                                    đại
                                     trà trực tuyến mở, tập trung nội dung là kĩ năng số cơ bản.
                                 </span>
                             </div>
@@ -96,15 +99,16 @@
                     </div>
                 </div>
                 <div class="col-md-6 col-sm-12 d-flex justify-content-start">
-                    <div class="custom-card" style="max-width: 415px">
+                    <div class="custom-card job-card" style="max-width: 415px">
                         <div class="d-flex flex-column">
-                                <img src="./assets/img/connect/itviec.svg" alt="" class="categories-image_active">
+                            <img src="./assets/img/connect/itviec.svg" alt="" class="categories-image_active">
                             <div class="col-12 d-flex flex-column text-center">
                                 <h4 class="fw-bold pb-5 pt-4">
                                     ITVIEC
                                 </h4>
                                 <span>
-                                    Xây dựng một nền tảng học tập kĩ năng số dưới hình thức Nguồn học liệu mở / khoá học đại
+                                    Xây dựng một nền tảng học tập kĩ năng số dưới hình thức Nguồn học liệu mở / khoá học
+                                    đại
                                     trà trực tuyến mở, tập trung nội dung là kĩ năng số cơ bản.
                                 </span>
                             </div>
@@ -112,15 +116,16 @@
                     </div>
                 </div>
                 <div class="col-md-6 col-sm-12 d-flex justify-content-end">
-                    <div class="custom-card" style="max-width: 415px">
+                    <div class="custom-card job-card" style="max-width: 415px">
                         <div class="d-flex flex-column">
-                                <img src="./assets/img/connect/vietnamworks.svg" alt="" class="categories-image_active">
+                            <img src="./assets/img/connect/vietnamworks.svg" alt="" class="categories-image_active">
                             <div class="col-12 d-flex flex-column text-center">
                                 <h4 class="fw-bold pb-5 pt-4">
                                     VIETNAMWORKS
                                 </h4>
                                 <span>
-                                    Xây dựng một nền tảng học tập kĩ năng số dưới hình thức Nguồn học liệu mở / khoá học đại
+                                    Xây dựng một nền tảng học tập kĩ năng số dưới hình thức Nguồn học liệu mở / khoá học
+                                    đại
                                     trà trực tuyến mở, tập trung nội dung là kĩ năng số cơ bản.
                                 </span>
                             </div>
@@ -128,15 +133,16 @@
                     </div>
                 </div>
                 <div class="col-md-6 col-sm-12 d-flex justify-content-start">
-                    <div class="custom-card" style="max-width: 415px">
+                    <div class="custom-card job-card" style="max-width: 415px">
                         <div class="d-flex flex-column">
-                                <img src="./assets/img/connect/itviec.svg" alt="" class="categories-image_active">
+                            <img src="./assets/img/connect/itviec.svg" alt="" class="categories-image_active">
                             <div class="col-12 d-flex flex-column text-center">
                                 <h4 class="fw-bold pb-5 pt-4">
                                     ITVIEC
                                 </h4>
                                 <span>
-                                    Xây dựng một nền tảng học tập kĩ năng số dưới hình thức Nguồn học liệu mở / khoá học đại
+                                    Xây dựng một nền tảng học tập kĩ năng số dưới hình thức Nguồn học liệu mở / khoá học
+                                    đại
                                     trà trực tuyến mở, tập trung nội dung là kĩ năng số cơ bản.
                                 </span>
                             </div>
@@ -196,8 +202,8 @@
     <script src="https://polyfill.io/v3/polyfill.min.js?features=window.scroll"></script>
     <script src="assets/js/theme.js"></script>
     <script src="assets/js/home-modal.js"></script>
-    <!-- Scroll Effect -->
-
+    <!-- back to top Button  -->
+    <script src="assets/js/toTop-btn.js"></script>
 </body>
 
 </html>
