--- a/Connect.html
+++ b/Connect.html
@@ -70,7 +70,7 @@
         </nav>
 
         <div class="hearder-banner">
-            <img src="./assets/img/gallery/header2-img.svg" class=" pt-5 w-100" alt="">
+            <img src="./assets/img/Banner/LienHe.png" class=" pt-5 w-100" alt="">
             <div class="header-banner-text" style="top: 80%;">
                 <h1 class="fw-bold">Liên hệ với chúng tôi</h1>
                 <p class="pt-3">Quý đối tác Tuyển Dụng và Đào Tạo vui lòng điền thông tin liên hệ vào biểu mẫu bên dưới, chúng tôi sẽ
@@ -112,8 +112,8 @@
         </div>
 
 
-        <!----------------------Footer-------------------------->
-        <footer class="footer bg-200 py-6 border-top">
+         <!----------------------Footer-------------------------->
+         <footer class="footer bg-200 py-6 border-top">
             <div class="container">
                 <div class="row">
                     <!-- Footer Location-->
@@ -129,23 +129,43 @@
                     </div>
                     <!-- Col 2-->
                     <div class="col-lg-3 mb-5 text-black">
-                        <p class="text-uppercase mb-4 fw-bold">Tải tài liệu</p>
+                        <p class="text-uppercase mb-4 fw-bold">Tài liệu tham khảo</p>
                         <div class="mt-3">
-                            <a href="assets/file/Huong_dan_cho_giao_vien.zip" class="text-decoration-none text-black"
+                            <a href="https://docs.microsoft.com/en-us/learn/" class="text-decoration-none text-black"
+                                target="_blank">
+                                Microsoft Learn
+                            </a>
+                        </div>
+                        <div class="mt-3">
+                            <a href="assets/file/Ky nang so co ban Tai lieu huong dan cho giao vien 2.0.pdf" class="text-decoration-none text-black"
                                 download="Huong_dan_cho_giao_vien.zip" target="_blank">
-                                Hướng dẫn cho giáo viên
+                                Kỹ năng số cơ bản - tài liệu cho giáo viên
                             </a>
                         </div>
                         <div class="mt-3">
                             <a href="assets/file/to_roi_gioi_thieu_ve_nen_tang.pdf"
                                 class="text-decoration-none text-black" download="to_roi_gioi_thieu_ve_nen_tang.pdf"
                                 target="_blank">
-                                Tờ rơi giới thiệu về Nền tảng
+                                Go Digital ASEAN - tài liệu cho giáo viên
+                            </a>
+                        </div>
+                        <div class="mt-3">
+                            <a href="assets/file/ThucHanhExcelTrongPhanTichDuLieu.zip"
+                                class="text-decoration-none text-black" download="ThucHanhExcelTrongPhanTichDuLieu.zip"
+                                target="_blank">
+                                Thực hành Excel trong phân tích dữ liệu
+                            </a>
+                        </div>
+                        <div class="mt-3">
+                            <a href="assets/file/to_roi_gioi_thieu_ve_nen_tang.pdf"
+                                class="text-decoration-none text-black" download="to_roi_gioi_thieu_ve_nen_tang.pdf"
+                                target="_blank">
+                                Kỹ năng mềm
                             </a>
                         </div>
                     </div>
                     <!-- Footer Social Icons-->
-                    <div class="col-lg-3 mb-5 mb-lg-0 text-black">
+                    <div class="col-lg-3 mb-5 mb-lg-0 text-black ps-sm-2">
                         <p class="text-uppercase mb-4 fw-bold">Nền tảng được phát triển dưới sự hợp tác giữa</p>
                         <div class="d-flex">
                             <img alt="" src="assets/img/gallery/logofooter.png" class="custom-image" />
