--- a/Partner.html
+++ b/Partner.html
@@ -71,25 +71,26 @@
         </nav>
 
         <div class="hearder-banner">
-            <img src="./assets/img/gallery/header1-img.svg" class=" pt-5 w-100" alt="">
+            <img src="./assets/img/Banner/DoiTacDaoTao.png" class=" pt-5 w-100" alt="">
             <div class="header-banner-text" style="top: 80%;">
                 <h1 class="fw-bold">Đối tác đào tạo</h1>
-                <p class="pt-3">Những kiến thức cơ bản để giúp bạn bắt đầu làm việc hiệu quả với máy tính</p>
+                <p class="pt-3">Mở rộng kiến thức, nâng cao kỹ năng bằng cách tham gia các khóa học nghề tại các cơ sở đào tạo nghề</p>
             </div>
         </div>
         <!-- Partners -->
         <div class="container pt-4">
             <div class="banner-partner row mb-5">
                 <div class="col-md-4 col-sm-12 partner-logo">
-                    <img src="./assets/img/partnerLogo/cao-dang-co-gioi-va-thuy-loi.jpg" class="" alt="">
+                    <img src="./assets/img/DoiTacDaoTao/CaoDangCongNgheCaoDongNai.png" class="" alt="">
                 </div>
                 <div class="col-md-8 col-sm-12 partner-content">
                     <div>
-                        <h4 class="fw-bold">Trường Cao Đẳng Cơ giới và Thủy lợi</h4>
-                        <p>Xây dựng một nền tảng học tập kĩ năng số dưới hình thức Nguồn học liệu mở / khoá học đại trà
-                            trực
-                            tuyến mở, tập trung nội dung là kĩ năng số cơ bản.</p>
-                        <a class=" fw-bold">Chi tiết đối tác
+                        <h4 class="fw-bold">Trường Cao Đẳng Công Nghệ Cao Đồng Nai</h4>
+                        <p>Cơ sở chính: 47 Đường Tôn Đức Thắng - Khu Phước Hải - Thị trấn Long Thành -  Huyện Long Thành -  Tỉnh Đồng Nai.
+                            <br> Điện thoại: 0251.384.4237
+                            <br> Cơ sở 2: đường Nguyễn Bỉnh Khiêm - xã Phú Hội - huyện Nhơn Trạch - tỉnh Đồng Nai
+                            <br> Điện thoại: 0251.356.1252</p>
+                        <a class=" fw-bold" href="https://dcoht.edu.vn/" target="_blank">Chi tiết đối tác
                             <i class="fas fa-chevron-right ml-2"></i>
                         </a>
                     </div>
@@ -97,15 +98,16 @@
             </div>
             <div class="banner-partner row">
                 <div class="col-md-4 col-sm-12 partner-logo">
-                    <img src="./assets/img/partnerLogo/cao-dang-cong-nghe-cao-dong-nai.png" class="" alt="">
+                    <img src="./assets/img/DoiTacDaoTao/CaoDangKinhTeHCM.png" class="" alt="">
                 </div>
                 <div class="col-md-8 col-sm-12 partner-content">
                     <div>
-                        <h4 class="fw-bold">Trường Cao Đẳng Cơ giới và Thủy lợi</h4>
-                        <p>Xây dựng một nền tảng học tập kĩ năng số dưới hình thức Nguồn học liệu mở / khoá học đại trà
-                            trực
-                            tuyến mở, tập trung nội dung là kĩ năng số cơ bản.</p>
-                        <a class=" fw-bold">Chi tiết đối tác
+                        <h4 class="fw-bold">Trường Cao Đẳng Kinh tế Thành phố Hồ Chí Minh</h4>
+                        <p>33 Vĩnh Viễn, Phường 02, Quận 10, TP.HCM. 
+                            <br>Điện thoại: 84.28.38 330 731 - 84.28.38 322 825 
+                            <br>Tư vấn tuyển sinh: 08.8833.0108 - 08.8833.0608
+                            <br>Email: hce@kthcm.edu.vn</p>
+                        <a class=" fw-bold" href="https://www.kthcm.edu.vn/" target="_blank">Chi tiết đối tác
                             <i class="fas fa-chevron-right ml-2"></i>
                         </a>
                     </div>
@@ -113,15 +115,15 @@
             </div>
             <div class="banner-partner row">
                 <div class="col-md-4 col-sm-12 partner-logo">
-                    <img src="./assets/img/partnerLogo/cao-dang-kinh-te-hcm.png" class="" alt="">
+                    <img src="./assets/img/DoiTacDaoTao/KinhTeKyThuatHCM.png" class="" alt="">
                 </div>
                 <div class="col-md-8 col-sm-12 partner-content">
                     <div>
-                        <h4 class="fw-bold">Trường Cao Đẳng Cơ giới và Thủy lợi</h4>
-                        <p>Xây dựng một nền tảng học tập kĩ năng số dưới hình thức Nguồn học liệu mở / khoá học đại trà
-                            trực
-                            tuyến mở, tập trung nội dung là kĩ năng số cơ bản.</p>
-                        <a class=" fw-bold">Chi tiết đối tác
+                        <h4 class="fw-bold">Trường Cao Đẳng Kinh tế - Kỹ thuật Thành phố Hồ Chí Minh</h4>
+                        <p>Địa chỉ: 215 Nguyễn Văn Luông, Phường 11, Quận 6, TP. Hồ Chí Minh
+                           <br> Điện thoại: (08) 3875 3773 <br> Fax: (08) 5406 0740
+                           <br> Email: ktkthcm@hotec.edu.vn - tuyensinh@hotec.edu.vn</p>
+                        <a class=" fw-bold" href="http://ktkthcm.edu.vn/" target="_blank">Chi tiết đối tác
                             <i class="fas fa-chevron-right ml-2"></i>
                         </a>
                     </div>
@@ -129,15 +131,13 @@
             </div>
             <div class="banner-partner row">
                 <div class="col-md-4 col-sm-12 partner-logo">
-                    <img src="./assets/img/partnerLogo/cao-dang-kinh-te-ky-thuat-hcm.png" class="" alt="">
+                    <img src="./assets/img/DoiTacDaoTao/TrungCapKinhTeKyThuatBacThangLong.png" class="" alt="">
                 </div>
                 <div class="col-md-8 col-sm-12 partner-content">
                     <div>
-                        <h4 class="fw-bold">Trường Cao Đẳng Cơ giới và Thủy lợi</h4>
-                        <p>Xây dựng một nền tảng học tập kĩ năng số dưới hình thức Nguồn học liệu mở / khoá học đại trà
-                            trực
-                            tuyến mở, tập trung nội dung là kĩ năng số cơ bản.</p>
-                        <a class=" fw-bold">Chi tiết đối tác
+                        <h4 class="fw-bold">Trường trung cấp Kinh tế Kỹ thuật Bắc Thăng Long</h4>
+                        <p>Địa chỉ: Thôn Bầu, Xã Kim Chung, Đông Anh, Thành Phố Hà Nội <br> Điện thoại: 0243.881.2693 / 0964.617.481 <br> Email: Info@btl.edu.vn</p>
+                        <a class=" fw-bold" href="https://btl.edu.vn/" target="_blank">Chi tiết đối tác
                             <i class="fas fa-chevron-right ml-2"></i>
                         </a>
                     </div>
@@ -145,15 +145,15 @@
             </div>
             <div class="banner-partner row">
                 <div class="col-md-4 col-sm-12 partner-logo">
-                    <img src="./assets/img/partnerLogo/cao-dang-ky-nghe.png" class="" alt="">
+                    <img src="./assets/img/DoiTacDaoTao/CaoDangKyNgheII.png" class="" alt="">
                 </div>
                 <div class="col-md-8 col-sm-12 partner-content">
                     <div>
-                        <h4 class="fw-bold">Trường Cao Đẳng Cơ giới và Thủy lợi</h4>
-                        <p>Xây dựng một nền tảng học tập kĩ năng số dưới hình thức Nguồn học liệu mở / khoá học đại trà
-                            trực
-                            tuyến mở, tập trung nội dung là kĩ năng số cơ bản.</p>
-                        <a class=" fw-bold">Chi tiết đối tác
+                        <h4 class="fw-bold">Trường Cao Đẳng Kỹ Nghệ II</h4>
+                        <p>Địa chỉ: 502 Đỗ Xuân Hợp Phường Phước Bình, Thành phố Thủ Đức , Thành Phố Hồ Chí Minh
+                            <br> Điện thoại: 028 37314063 - 028 37314032
+                            <br> Hotline tư vấn tuyển sinh: 1900 966 916 - 028 37310667 - 028 37311566</p>
+                        <a class=" fw-bold" href="https://hvct.edu.vn/" target="_blank">Chi tiết đối tác
                             <i class="fas fa-chevron-right ml-2"></i>
                         </a>
                     </div>
@@ -161,15 +161,99 @@
             </div>
             <div class="banner-partner row">
                 <div class="col-md-4 col-sm-12 partner-logo">
-                    <img src="./assets/img/partnerLogo/cao-dang-ky-thuat-dong-nai.jpg" class="" alt="">
+                    <img src="./assets/img/DoiTacDaoTao/CaoDangKyThuatDongNai.jpeg" class="" alt="">
                 </div>
                 <div class="col-md-8 col-sm-12 partner-content">
                     <div>
-                        <h4 class="fw-bold">Trường Cao Đẳng Cơ giới và Thủy lợi</h4>
-                        <p>Xây dựng một nền tảng học tập kĩ năng số dưới hình thức Nguồn học liệu mở / khoá học đại trà
-                            trực
-                            tuyến mở, tập trung nội dung là kĩ năng số cơ bản.</p>
-                        <a class=" fw-bold">Chi tiết đối tác
+                        <h4 class="fw-bold">Trường Cao Đẳng Kỹ Thuật Đồng Nai</h4>
+                        <p>88 Nguyễn Văn Hoa, Phường Thống Nhất, Thành phố Biên Hòa, Tỉnh Đồng Nai.
+                            <br> Fax: (0251) 3822263
+                            <br> E-mail: caodangdona@gmail.com</p>
+                        <a class=" fw-bold" href="http://cdktdn.edu.vn/" target="_blank" >Chi tiết đối tác
+                            <i class="fas fa-chevron-right ml-2"></i>
+                        </a>
+                    </div>
+                </div>
+            </div>
+            <div class="banner-partner row">
+                <div class="col-md-4 col-sm-12 partner-logo">
+                    <img src="./assets/img/DoiTacDaoTao/CaoDangNgheTPHCM.png" class="" alt="">
+                </div>
+                <div class="col-md-8 col-sm-12 partner-content">
+                    <div>
+                        <h4 class="fw-bold">Trường Cao Đẳng Nghề Thành Phố Hồ Chí Minh</h4>
+                        <p>Cơ sở 1: 235 Hoàng Sa, phường Tân Định, Quận 1. 
+                           <br> Điện thoại: Trung tâm Tuyển sinh & HTVL: (028) 35.267.377
+                           <br> Phòng HC-TC: (028) 38 483 265; Phòng Đào tạo: (028) 38 438 720
+                            <br> Cơ sở 2: 19A, đường 17, P.Linh Chiểu, TP.Thủ Đức.
+                            <br> Điện thoại: (028) 37.225.782
+                            <br> HOTLINE & ZALO: 0924116266</p>
+                        <a class=" fw-bold" href="http://www.caodangnghehcm.edu.vn/" target="_blank">Chi tiết đối tác
+                            <i class="fas fa-chevron-right ml-2"></i>
+                        </a>
+                    </div>
+                </div>
+            </div>
+            <div class="banner-partner row">
+                <div class="col-md-4 col-sm-12 partner-logo">
+                    <img src="./assets/img/DoiTacDaoTao/CaoDangNgheVN-Sing.png" class="" alt="">
+                </div>
+                <div class="col-md-8 col-sm-12 partner-content">
+                    <div>
+                        <h4 class="fw-bold">Trường Cao Đẳng Nghề Việt Nam - Singapore</h4>
+                        <p>Trụ sở: Đại lộ Bình Dương, Phường Thuận Giao, thành phố Thuận An, Tỉnh Bình Dương.
+                           <br> Điện thoại: (0274). 3820655; 3831413; 3824269 
+                           <br> Fax: (0274). 3820812</p>
+                        <a class=" fw-bold" href="http://www.vsvc.edu.vn/" target="_blank">Chi tiết đối tác
+                            <i class="fas fa-chevron-right ml-2"></i>
+                        </a>
+                    </div>
+                </div>
+            </div>
+            <div class="banner-partner row">
+                <div class="col-md-4 col-sm-12 partner-logo">
+                    <img src="./assets/img/DoiTacDaoTao/CaoDangVN-HQ BinhDuong.png" class="" alt="">
+                </div>
+                <div class="col-md-8 col-sm-12 partner-content">
+                    <div>
+                        <h4 class="fw-bold">Trường Cao Đẳng Việt Nam - Hàn Quốc Bình Dương</h4>
+                        <p>Cơ sở 1: Số 6, Đồng Cây Viết, Kp1, P. Phú Mỹ, Tp.Thủ Dầu Một, Bình Dương
+                           <br> Cơ sở 2: Số 100, Hoàng Hoa Thám, P. Hiệp Thành, Tp.Thủ Dầu Một, Bình Dương
+                           <br> Cơ sở 3: Đường ĐH 412, Tổ 2, Kp 6, P. Uyên Hưng, Tx. Tân Uyên, Bình Dương
+                           <br> Điện thoại: 0274.3822.460
+                           <br> Email: phonghanhchinhviethan@gmail.com</p>
+                        <a class=" fw-bold" href="https://viethanbd.edu.vn/" target="_blank">Chi tiết đối tác
+                            <i class="fas fa-chevron-right ml-2"></i>
+                        </a>
+                    </div>
+                </div>
+            </div>
+            <div class="banner-partner row">
+                <div class="col-md-4 col-sm-12 partner-logo">
+                    <img src="./assets/img/DoiTacDaoTao/CaoDangYTeBinhDuong.jpeg" class="" alt="">
+                </div>
+                <div class="col-md-8 col-sm-12 partner-content">
+                    <div>
+                        <h4 class="fw-bold">Trường Cao Đẳng Y Tế Bình Dương</h4>
+                        <p>Địa chỉ: 529 Lê Hồng Phong, Phường Phú Hòa, Tp. Thủ Dầu Một, Tỉnh Bình Dương
+                          <br> Điện thoại (0274) 3822727 - 3832867</p>
+                        <a class=" fw-bold" href="http://cdytbinhduong.edu.vn/" target="_blank">Chi tiết đối tác
+                            <i class="fas fa-chevron-right ml-2"></i>
+                        </a>
+                    </div>
+                </div>
+            </div>
+            <div class="banner-partner row">
+                <div class="col-md-4 col-sm-12 partner-logo">
+                    <img src="./assets/img/DoiTacDaoTao/CaoDangCoGioiVaThuyLoiDongNai.jpeg" class="" alt="">
+                </div>
+                <div class="col-md-8 col-sm-12 partner-content">
+                    <div>
+                        <h4 class="fw-bold">Trường Cao Đẳng Cơ Giới Và Thủy Lợi Đồng Nai</h4>
+                        <p>Địa Chỉ: QL1A, Ấp Thanh Hóa, Xã Hố Nai 3, Huyện Trảng Bom, Đồng Nai
+                           <br> Điện Thoại: 02513.968216 - 02518.971407 -  02513.968203 - 02518.971407
+                            </p>
+                        <a class=" fw-bold" href="https://vcmi.edu.vn/" target="_blank">Chi tiết đối tác
                             <i class="fas fa-chevron-right ml-2"></i>
                         </a>
                     </div>
@@ -193,23 +277,43 @@
                     </div>
                     <!-- Col 2-->
                     <div class="col-lg-3 mb-5 text-black">
-                        <p class="text-uppercase mb-4 fw-bold">Tải tài liệu</p>
+                        <p class="text-uppercase mb-4 fw-bold">Tài liệu tham khảo</p>
                         <div class="mt-3">
-                            <a href="assets/file/Huong_dan_cho_giao_vien.zip" class="text-decoration-none text-black"
+                            <a href="https://docs.microsoft.com/en-us/learn/" class="text-decoration-none text-black"
+                                target="_blank">
+                                Microsoft Learn
+                            </a>
+                        </div>
+                        <div class="mt-3">
+                            <a href="assets/file/Ky nang so co ban Tai lieu huong dan cho giao vien 2.0.pdf" class="text-decoration-none text-black"
                                 download="Huong_dan_cho_giao_vien.zip" target="_blank">
-                                Hướng dẫn cho giáo viên
+                                Kỹ năng số cơ bản - tài liệu cho giáo viên
                             </a>
                         </div>
                         <div class="mt-3">
                             <a href="assets/file/to_roi_gioi_thieu_ve_nen_tang.pdf"
                                 class="text-decoration-none text-black" download="to_roi_gioi_thieu_ve_nen_tang.pdf"
                                 target="_blank">
-                                Tờ rơi giới thiệu về Nền tảng
+                                Go Digital ASEAN - tài liệu cho giáo viên
+                            </a>
+                        </div>
+                        <div class="mt-3">
+                            <a href="assets/file/ThucHanhExcelTrongPhanTichDuLieu.zip"
+                                class="text-decoration-none text-black" download="ThucHanhExcelTrongPhanTichDuLieu.zip"
+                                target="_blank">
+                                Thực hành Excel trong phân tích dữ liệu
+                            </a>
+                        </div>
+                        <div class="mt-3">
+                            <a href="assets/file/to_roi_gioi_thieu_ve_nen_tang.pdf"
+                                class="text-decoration-none text-black" download="to_roi_gioi_thieu_ve_nen_tang.pdf"
+                                target="_blank">
+                                Kỹ năng mềm
                             </a>
                         </div>
                     </div>
                     <!-- Footer Social Icons-->
-                    <div class="col-lg-3 mb-5 mb-lg-0 text-black">
+                    <div class="col-lg-3 mb-5 mb-lg-0 text-black ps-sm-2">
                         <p class="text-uppercase mb-4 fw-bold">Nền tảng được phát triển dưới sự hợp tác giữa</p>
                         <div class="d-flex">
                             <img alt="" src="assets/img/gallery/logofooter.png" class="custom-image" />
