--- a/Jobs.html
+++ b/Jobs.html
@@ -47,7 +47,7 @@
 </head>
 
 <body>
-    <button onclick="topFunction()" id="btn-back-to-top" title="Go to top">  <i class="fas fa-arrow-up"></i></button>
+    <button onclick="topFunction()" id="btn-back-to-top" title="Go to top"> <i class="fas fa-arrow-up"></i></button>
     <main class="main" id="top">
         <nav class="navbar navbar-expand-lg navbar-light fixed-top bg-custom">
             <div class="container">
@@ -64,95 +64,170 @@
                     <a class="nav-link " aria-current="page" href="Partner.html">Đối tác đào tạo</a>
                     <a class="nav-link active" aria-current="page" href="#">Kết nối việc làm</a>
                     <a class="nav-link" aria-current="page" href="Connect.html">Liên hệ</a>
-                    <a class="btn btn-theme py-2 m-2" href="https://hoc.congdanso.edu.vn/learner#/course/course-library" target="_blank">Bắt đầu học</a>
+                    <a class="btn btn-theme py-2 m-2" href="https://hoc.congdanso.edu.vn/learner#/course/course-library"
+                        target="_blank">Bắt đầu học</a>
 
                 </div>
             </div>
         </nav>
 
         <div class="hearder-banner">
-            <img src="./assets/img/gallery/header2-img.svg" class=" pt-5 w-100" alt="">
-            <div class="header-banner-text" style="top: 90%;">
+            <img src="./assets/img/Banner/KetNoiViecLam.png" class=" pt-5 w-100" alt="">
+            <div class="header-banner-text" style="top: 80%;">
                 <h1 class="fw-bold">Kết nối việc làm</h1>
-                <p class="pt-3">Những kiến thức cơ bản để giúp bạn bắt đầu làm việc hiệu quả với máy
-                    tính</p>
+                <p class="pt-3">Tìm kiếm cơ hội việc làm thông qua các Trung tâm giới thiệu việc làm tại các tỉnh, thành
+                    và địa phương</p>
             </div>
         </div>
         <!-- Content -->
         <div class="container pb-7 pt-7">
-            <div class="row">
-                <div class="col-md-6 col-sm-12 d-flex justify-content-end">
+            <div class="row text-center">
+                <div class="col-md-4 col-sm-12 d-flex justify-content-center">
                     <div class="custom-card job-card" style="max-width: 415px">
                         <div class="d-flex flex-column">
-                            <img src="./assets/img/connect/vietnamworks.svg" alt="" class="categories-image_active">
-                            <div class="col-12 d-flex flex-column text-center">
-                                <h4 class="fw-bold pb-5 pt-4">
-                                    VIETNAMWORKS
-                                </h4>
-                                <span>
-                                    Xây dựng một nền tảng học tập kĩ năng số dưới hình thức Nguồn học liệu mở / khoá học
-                                    đại
-                                    trà trực tuyến mở, tập trung nội dung là kĩ năng số cơ bản.
-                                </span>
-                            </div>
+                            <img src="./assets/img/KetNoiViecLam/SoLaoDongThuongBinhVaXaHoiQuangBinh.png" alt=""
+                                class="job-image">
+                            <h4 class="fw-bold job-title">
+                                Trung Tâm Dịch vụ việc làm - Sở Lao động, Thương binh và Xã Hội Quảng Bình
+                            </h4>
+                            <span class="pt-2">
+                                Địa chỉ : 50 Đường Hai Bà Trưng - TP. Đồng Hới.
+                                <br> Điện thoại: 0232.3822393
+                                <br> Email: sldtbxh@quangbinh.gov.vn
+                            </span>
+                            <a class="fw-bold pt-3"
+                                href="https://sldtbxh.quangbinh.gov.vn/eu/trung-tam-gioi-thieu-viec-lam-quang-binh"
+                                target="_blank">Thông tin chi tiết
+                                <i class="fas fa-chevron-right ml-2"></i>
+                            </a>
                         </div>
                     </div>
                 </div>
-                <div class="col-md-6 col-sm-12 d-flex justify-content-start">
+                <div class="col-md-4 col-sm-12 d-flex justify-content-center">
                     <div class="custom-card job-card" style="max-width: 415px">
                         <div class="d-flex flex-column">
-                            <img src="./assets/img/connect/itviec.svg" alt="" class="categories-image_active">
-                            <div class="col-12 d-flex flex-column text-center">
-                                <h4 class="fw-bold pb-5 pt-4">
-                                    ITVIEC
-                                </h4>
-                                <span>
-                                    Xây dựng một nền tảng học tập kĩ năng số dưới hình thức Nguồn học liệu mở / khoá học
-                                    đại
-                                    trà trực tuyến mở, tập trung nội dung là kĩ năng số cơ bản.
-                                </span>
-                            </div>
+                            <img src="./assets/img/KetNoiViecLam/NgheAn.jpeg" alt="" class="job-image">
+                            <h4 class="fw-bold job-title">
+                                Trung Tâm Dịch vụ việc làm Nghệ An
+                            </h4>
+                            <span class="pt-2">
+                                Trụ sở: Số 201,Đ.Phong Định Cảng, P.Trường Thi, TP Vinh, Nghệ An
+                                <br> Email: sanvieclamnghean@gmail.com
+                                <br> Điện thoại: 02383 550 050
+                            </span>
+                            <a class="fw-bold pt-3" href="https://vieclamnghean.vn/" target="_blank">Thông tin chi tiết
+                                <i class="fas fa-chevron-right ml-2"></i>
+                            </a>
                         </div>
                     </div>
                 </div>
-                <div class="col-md-6 col-sm-12 d-flex justify-content-end">
+                <div class="col-md-4 col-sm-12 d-flex justify-content-center">
                     <div class="custom-card job-card" style="max-width: 415px">
                         <div class="d-flex flex-column">
-                            <img src="./assets/img/connect/vietnamworks.svg" alt="" class="categories-image_active">
-                            <div class="col-12 d-flex flex-column text-center">
-                                <h4 class="fw-bold pb-5 pt-4">
-                                    VIETNAMWORKS
-                                </h4>
-                                <span>
-                                    Xây dựng một nền tảng học tập kĩ năng số dưới hình thức Nguồn học liệu mở / khoá học
-                                    đại
-                                    trà trực tuyến mở, tập trung nội dung là kĩ năng số cơ bản.
-                                </span>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-6 col-sm-12 d-flex justify-content-start">
-                    <div class="custom-card job-card" style="max-width: 415px">
-                        <div class="d-flex flex-column">
-                            <img src="./assets/img/connect/itviec.svg" alt="" class="categories-image_active">
-                            <div class="col-12 d-flex flex-column text-center">
-                                <h4 class="fw-bold pb-5 pt-4">
-                                    ITVIEC
-                                </h4>
-                                <span>
-                                    Xây dựng một nền tảng học tập kĩ năng số dưới hình thức Nguồn học liệu mở / khoá học
-                                    đại
-                                    trà trực tuyến mở, tập trung nội dung là kĩ năng số cơ bản.
-                                </span>
-                            </div>
+                            <img src="./assets/img/KetNoiViecLam/HaTinh.jpeg" alt="" class="job-image"
+                                style="padding-bottom: 20px;">
+                            <h4 class="fw-bold job-title">
+                                Trung Tâm Dịch Vụ việc làm Hà Tĩnh
+                            </h4>
+                            <span class="pt-2">
+                                Địa chỉ: 156 - Trần Phú - TP. Hà Tĩnh - Hà Tĩnh
+                                <br> ĐT: 02393.851.295 - 02393.853.505 - 02393.734.789
+                                <br> Email: sanvieclamhatinh@gmail.com
+                            </span>
+                            <a class="fw-bold pt-3" href="http://vieclamhatinh.vn/vi/job/" target="_blank">Thông tin chi tiết
+                                <i class="fas fa-chevron-right ml-2"></i>
+                            </a>
                         </div>
                     </div>
                 </div>
             </div>
+            <div class="row text-center">
+                <div class="col-md-4 col-sm-12 d-flex justify-content-center">
+                    <div class="custom-card job-card" style="max-width: 415px">
+                        <div class="d-flex flex-column">
+                            <img src="./assets/img/KetNoiViecLam/Binh duong.png" alt="" class="job-image"
+                                style="padding-bottom: 20px;">
+                            <h4 class="fw-bold job-title">
+                                Trung tâm Dịch vụ việc làm Bình Dương
+                            </h4>
+                            <span class="pt-2">
+                                Trụ Sở Chính : 369 Đại Lộ Bình Dương, KP.Hòa Lân, Thuận Giao, Thuận An, Bình Dương
+                                <br> Số Điện Thoại : (0274) 3.899.019
+                                <br> Email: phonggtvlbd@gmail.com"
+                            </span>
+                            <a class="fw-bold pt-3" href="http://www.vieclambinhduong.vn/" target="_blank">Thông tin chi tiết
+                                <i class="fas fa-chevron-right ml-2"></i>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4 col-sm-12 d-flex justify-content-center">
+                    <div class="custom-card job-card" style="max-width: 415px">
+                        <div class="d-flex flex-column">
+                            <img src="./assets/img/KetNoiViecLam/DongNai.png" alt="" class="job-image"
+                                style="object-fit: contain; min-height: 225px; padding: 0px;">
+                            <h4 class="fw-bold job-title">
+                                Trung tâm Dịch vụ việc làm Đồng Nai
+                            </h4>
+                            <span class="pt-2">
+                                Địa chỉ: Khu phố 5, phường Tân Hiệp, Biên Hòa, Đồng Nai.
+                                <br> Số điện thoại: 0251 8823 445
+                                <br>Email: vieclammoi.dongnai@gmail.com
+                            </span>
+                            <a class="fw-bold pt-3" href="http://vieclamdongnai.gov.vn/" target="_blank">Thông tin chi tiết
+                                <i class="fas fa-chevron-right ml-2"></i>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4 col-sm-12 d-flex justify-content-center">
+                    <div class="custom-card job-card" style="max-width: 415px">
+                        <div class="d-flex flex-column">
+                            <img src="./assets/img/KetNoiViecLam/HCM.jpeg" alt="" class="job-image"
+                                style="padding-bottom: 20px;">
+                            <h4 class="fw-bold job-title">
+                                Trung tâm Dịch vụ việc làm Tp.HCM
+                            </h4>
+                            <span class="pt-2">
+                                Đia chỉ: 153 Xô Viêt Nghệ Tĩnh, Phường 17, Quận Bình Thạnh, Thành phố Hồ Chí Minh
+                                <br> Phòng Giới thiệu việc làm: (028) 35 147 484 - 3510 6121
+                                <br> Email: info@vieclamhcm.net
+                            </span>
+                            <a class="fw-bold pt-3" href="http://vieclamhcm.net/" target="_blank">Thông tin chi tiết
+                                <i class="fas fa-chevron-right ml-2"></i>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="row text-center">
+                <div class="col-md-4">
+                </div>
+                <div class="col-md-4 col-sm-12 d-flex justify-content-center">
+                    <div class="custom-card job-card" style="max-width: 415px">
+                        <div class="d-flex flex-column">
+                            <img src="./assets/img/KetNoiViecLam/Thai nguyen.jpeg" alt="" class="job-image"
+                                style="padding-bottom: 20px;">
+                            <h4 class="fw-bold job-title">
+                                Trung tâm Dịch vụ việc làm Thái Nguyên
+                            </h4>
+                            <span class="pt-2">
+                                Trụ sở chính: Số 2A - Đường Chu Văn An - Phường Hoàng Văn Thụ - TP. Thái Nguyên
+                                <br> Hotline:0208 3858 365 - 0208 3857 021
+                                <br> Email:thitruonglaodongtn@gmail.com
+                            </span>
+                            <a class="fw-bold pt-3" href="http://vieclamthainguyen.gov.vn/" target="_blank">Thông tin chi tiết
+                                <i class="fas fa-chevron-right ml-2"></i>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                </div>
+            </div>
         </div>
-        <!----------------------Footer-------------------------->
-        <footer class="footer bg-200 py-6 border-top">
+         <!----------------------Footer-------------------------->
+         <footer class="footer bg-200 py-6 border-top">
             <div class="container">
                 <div class="row">
                     <!-- Footer Location-->
@@ -168,23 +243,43 @@
                     </div>
                     <!-- Col 2-->
                     <div class="col-lg-3 mb-5 text-black">
-                        <p class="text-uppercase mb-4 fw-bold">Tải tài liệu</p>
+                        <p class="text-uppercase mb-4 fw-bold">Tài liệu tham khảo</p>
                         <div class="mt-3">
-                            <a href="assets/file/Huong_dan_cho_giao_vien.zip" class="text-decoration-none text-black"
+                            <a href="https://docs.microsoft.com/en-us/learn/" class="text-decoration-none text-black"
+                                target="_blank">
+                                Microsoft Learn
+                            </a>
+                        </div>
+                        <div class="mt-3">
+                            <a href="assets/file/Ky nang so co ban Tai lieu huong dan cho giao vien 2.0.pdf" class="text-decoration-none text-black"
                                 download="Huong_dan_cho_giao_vien.zip" target="_blank">
-                                Hướng dẫn cho giáo viên
+                                Kỹ năng số cơ bản - tài liệu cho giáo viên
                             </a>
                         </div>
                         <div class="mt-3">
                             <a href="assets/file/to_roi_gioi_thieu_ve_nen_tang.pdf"
                                 class="text-decoration-none text-black" download="to_roi_gioi_thieu_ve_nen_tang.pdf"
                                 target="_blank">
-                                Tờ rơi giới thiệu về Nền tảng
+                                Go Digital ASEAN - tài liệu cho giáo viên
+                            </a>
+                        </div>
+                        <div class="mt-3">
+                            <a href="assets/file/ThucHanhExcelTrongPhanTichDuLieu.zip"
+                                class="text-decoration-none text-black" download="ThucHanhExcelTrongPhanTichDuLieu.zip"
+                                target="_blank">
+                                Thực hành Excel trong phân tích dữ liệu
+                            </a>
+                        </div>
+                        <div class="mt-3">
+                            <a href="assets/file/to_roi_gioi_thieu_ve_nen_tang.pdf"
+                                class="text-decoration-none text-black" download="to_roi_gioi_thieu_ve_nen_tang.pdf"
+                                target="_blank">
+                                Kỹ năng mềm
                             </a>
                         </div>
                     </div>
                     <!-- Footer Social Icons-->
-                    <div class="col-lg-3 mb-5 mb-lg-0 text-black">
+                    <div class="col-lg-3 mb-5 mb-lg-0 text-black ps-sm-2">
                         <p class="text-uppercase mb-4 fw-bold">Nền tảng được phát triển dưới sự hợp tác giữa</p>
                         <div class="d-flex">
                             <img alt="" src="assets/img/gallery/logofooter.png" class="custom-image" />
