--- a/index.html
+++ b/index.html
@@ -946,11 +946,11 @@
                         <p class="text-uppercase mb-1 fw-bold">Nền tảng được phát triển dưới sự hợp tác của DVET và IOM
                         </p>
                         <div class="d-flex">
-                            <img alt="" src="assets/img/footer/line1.png" class="custom-image" />
+                            <img alt="" src="assets/img/Footer/line1.png" class="custom-image" />
                         </div>
                         <p class="mb-1">Và được đóng góp bởi</p>
                         <div class="d-flex">
-                            <img alt="" src="assets/img/footer/line2.png" class="custom-image" />
+                            <img alt="" src="assets/img/Footer/line2.png" class="custom-image" />
                         </div>
                     </div>
                 </div>
